--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>SONA</title>
 	 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
@@ -39,10 +40,10 @@
 			</ul>
 			<div class="navbar-right">
 				<button type="button" class="btn btn-default navbar-btn" data-target="#login-modal" data-toggle="modal">
-					Login
+					Login <i class="fa fa-lock"></i> 
 				</button>
 				<button type="button" class="btn btn-default navbar-btn" data-target="#signup-modal" data-toggle="modal">
-					Signup
+					 Signup
 				</button>
 			</div>
 		</div>
